# BaF-solver

./: BaF137_Q0_X_Z_B14_gradient_check.ipynb  BaF137_Q0_X_Z_B15_evolution.ipynb  LICENCE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
BaF_solver/: PiHamiltonian.py  SigmaHamiltonian.py  fast_wigners.py  field_optimization.py  hamiltonian.py  interaction.c  interaction.pyx  molecular_parameters.py  obe.py  obe_with_gradient.py  spin_params.py  states.py  system.py
