[build-system]
requires = [
    "setuptools>=61.0",
    "cython>=0.29"
]
build-backend = "setuptools.build_meta"

[project]
name = "BaF_solver"
version = "0.0.1"
authors = [
  { name="Mangesh Bhattarai"},
]
description = "OBE solver for BaF molecule"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
